--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <body>
         <h1>Nathan Friel</h1>
         <div class="pics">
-            <img src="assets/img_1.jpg"/>
+            <img src="assets/img_1.JPG"/>
             <p class="pic_info"></p>
-            <img src="assets/img_2.jpg"/>
+            <img src="assets/img_2.JPG"/>
             <p class="pic_info"></p>
-            <img src="assets/img_3.jpg"/>
+            <img src="assets/img_3.JPG"/>
             <p class="pic_info"></p>
         </div>
     </body>
