--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <h1>Nathan Friel</h1>
         <div class="pics">
             <img src="assets/img_1.JPG"/>
-            <p class="pic_info"></p>
+            <p></p>
             <img src="assets/img_2.JPG"/>
-            <p class="pic_info"></p>
+            <p></p>
             <img src="assets/img_3.JPG"/>
-            <p class="pic_info"></p>
+            <p></p>
+            <img src="assets/img_4.JPG"/>
+            <p></p>
         </div>
     </body>
 </html>
