--- a/index.html
+++ b/index.html
@@ -10,15 +10,11 @@
     </head>
     <body>
         <h1>Nathan Friel</h1>
-        <div class="pics">
+        <div class="flex">
             <img src="assets/img_1.JPG"/>
-            <p></p>
             <img src="assets/img_2.JPG"/>
-            <p></p>
             <img src="assets/img_3.JPG"/>
-            <p></p>
             <img src="assets/img_4.JPG"/>
-            <p></p>
         </div>
     </body>
 </html>
