--- a/index.html
+++ b/index.html
@@ -1,20 +1,33 @@
 <!DOCTYPE html>
 
 <html lang="en-US">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width"/>
-        <meta name="author" content="Nathan Friel"/>
-        <link rel="stylesheet" href="style.css"/>
-        <title>Home</title>
-    </head>
-    <body>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="author" content="Nathan Friel" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Home</title>
+</head>
+
+<body>
+    <a href="index.html">
         <h1>Nathan Friel</h1>
-        <div class="flex">
-            <img src="assets/img_1.JPG"/>
-            <img src="assets/img_2.JPG"/>
-            <img src="assets/img_3.JPG"/>
-            <img src="assets/img_4.JPG"/>
-        </div>
-    </body>
+    </a>
+    <div class="flex_menu">
+        <a href="art.html">
+            <h2>Art</h2>
+        </a>
+        <a href="https://github.com/nfriel">
+            <h2>Code</h2>
+        </a>
+        <a href="game.html">
+            <h2>Game</h2>
+        </a>
+        <a href="contact.html">
+            <h2>Contact</h2>
+        </a>
+    </div>
+</body>
+
 </html>
