--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,21 @@
     <a href="index.html">
         <h1>Nathan Friel</h1>
     </a>
-
+    <h2><sup>Email </sup><sub>me </sub><sup>at </sup>
+        <a href="mailto:nathanfriel97@gmail.com">
+            <em>nathanfriel97@gmail.com</em>
+        </a>
+    </h2>
+    <h2><sup>Message </sup><sub>me </sub><sup>on </sup><sub>instagram </sub>
+        <a href="https://instagram.com/strohsbros">
+            <em>@strohsbros</em>
+        </a>
+    </h2>
+    <h2><sup>Message </sup><sub>me </sub><sup>on </sup><sub>github </sub>
+        <a href="https://github.com/nfriel">
+            <em>@nfriel</em>
+        </a>
+    </h2>
 </body>
 
 </html>
