--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <a href="https://github.com/nfriel">
             <h2>Code</h2>
         </a>
-        <a href="game.html">
-            <h2>Game</h2>
+        <a href="boot.html">
+            <h2>Bootstrap demo</h2>
         </a>
         <a href="contact.html">
             <h2>Contact</h2>
